--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,4 +1,7 @@
 <template name="landing">
-  <h2>Landing</h2>
+  <h2 style="position:absolute;z-index:999999">Landing</h2>
+  <p>This is the landing page! Besterday is awesome, you should try it.</p>
+  	<p>Create an account or log in using that button over there -- &raquo;</p>
+  <p>Oh, but facebook login is still not working, so don't click that. -- &raquo;</p>
 
 </template>
