--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -1,7 +1,18 @@
 <template name="landing">
-  <h2 style="position:absolute;z-index:999999">Landing</h2>
-  <p>This is the landing page! Besterday is awesome, you should try it.</p>
-  	<p>Create an account or log in using that button over there -- &raquo;</p>
-  <p>Oh, but facebook login is still not working, so don't click that. -- &raquo;</p>
+
+  <div class="landing-hero">
+    <h1>Besterday</h1>
+    <p>
+      Capture, catalogue, and remember the best part of your day, everyday.<br />
+      <a class="cta" href="#">Get started</a>
+    </p>
+  </div>
+  <div class="landing-example">
+    The best part of my day was...
+  </div>
+  <div class="landing-story">
+  </div>
+  <div class="footer">
+  </div>
 
 </template>
