--- a/client/style/common/main.scss
+++ b/client/style/common/main.scss
@@ -183,7 +183,9 @@ body,html {
   height:100%;
 }
 body {
-  overflow:hidden;
+  // overflow:hidden;
+  margin:0;
+  padding:0;
   background:$bg;
 }
 .bg {
@@ -302,7 +304,7 @@ body {
   /* Display & Box Model */
   @include box-sizing;
   display:block;
-  margin:40px 0;
+  // margin:40px 0;
   padding:0 20px;
 
   /* Presentation */
@@ -344,7 +346,7 @@ body {
     /* Display & Box Model */
     @include box-sizing;
     display:block;
-    margin:40px 0;
+    // margin:40px 0;
     padding:0 20px;
 
     /* Presentation */
@@ -363,6 +365,13 @@ body {
     &:-moz-placeholder            {opacity:.5 !important;} /* Firefox 18- */
     &::-moz-placeholder           {opacity:.5 !important;} /* Firefox 19+ */
     &:-ms-input-placeholder       {opacity:.5 !important;}  
+
+    &.long {
+      padding: 140px 140px 70px;
+      padding-top:140px !important;
+      font-size: 24px;
+      line-height: 34px;
+    }
 
     /* Animation */
     @include accelerate;
@@ -1003,10 +1012,6 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
 
 
 
-/* ==========================================================================
-   Filepicker
-   ========================================================================== */
-
 #filepicker_shade {
   background:none !important;
 }
@@ -1018,5 +1023,86 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
 
 
 
+/* ==========================================================================
+   Filepicker
+   ========================================================================== */
 
 
+
+
+
+
+.landing-hero {
+  position:relative;
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  background:#efefef;
+  h1 {
+    display:block;
+    margin:0;
+    padding:80px 80px 40px;
+    color:#cecece;
+    font-weight:800;
+    font-size:24px;
+    font-family:"ratio";
+  }
+
+  p {
+    display:block;
+    margin:0;
+    padding:40px 80px;
+    color:#666666;
+    font-weight:300;
+    font-size:48px;
+    font-family:"ratio";
+    a.cta {      
+      /* Positioning */
+      height:36px;
+      width:160px;
+
+      /* Display & Box Model */
+      display:block;
+      @include box-sizing;
+      padding:10px 0 0;
+      margin:20px 0 0 0;
+
+      /* Presentation */
+      background-color:$orange;
+
+      /* Font */
+      color:#ffffff;
+      text-align:center;
+      text-decoration:none;
+      text-transform:uppercase;
+      letter-spacing:.2em;
+      font-weight:400;
+      font-size:12px;
+      font-family:"ratio";
+      @include transition(background-color .2s);
+      @include transition(color .2s);
+    }
+  }
+}
+
+
+.landing-example {
+  @include box-sizing;
+  position:relative;
+  top:-400px;
+  margin:0 auto;
+  padding:20px;
+  width:800px;
+  height:600px;
+  max-width:90%;
+  border:20px solid #ffffff;
+  background:$bg;
+  color:#cecece;
+  font-weight:300;
+  font-size:36px;
+  font-family:"ratio";
+  line-height:520px;
+  @include box-shadow(0 0 80px rgba(0,0,0,.05));
+
+}
