--- a/client/style/common/main.scss
+++ b/client/style/common/main.scss
@@ -183,7 +183,7 @@ body,html {
   height:100%;
 }
 body {
-  // overflow:hidden;
+  overflow-x:hidden;
   margin:0;
   padding:0;
   background:$bg;
@@ -1033,16 +1033,17 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
 
 
 .landing-hero {
+  @include box-sizing;
   position:relative;
   margin:0;
-  padding:0;
+  padding:40px;
   width:100%;
-  height:100%;
+  min-height:100%;
   background:#efefef;
   h1 {
     display:block;
     margin:0;
-    padding:80px 80px 40px;
+    padding:40px;
     color:#cecece;
     font-weight:800;
     font-size:24px;
@@ -1050,9 +1051,11 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
   }
 
   p {
+    @include transition(left 1s);
+    position:relative;
     display:block;
     margin:0;
-    padding:40px 80px;
+    padding:40px;
     color:#666666;
     font-weight:300;
     font-size:48px;
@@ -1066,7 +1069,7 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
       display:block;
       @include box-sizing;
       padding:10px 0 0;
-      margin:20px 0 0 0;
+      margin:20px 0;
 
       /* Presentation */
       background-color:$orange;
@@ -1087,15 +1090,17 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
 }
 
 
-.landing-example {
+.landing-hero-example {
   @include box-sizing;
+  @include box-shadow(0 0 80px rgba(0,0,0,.05));
+  @include transform(perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px));
   position:relative;
-  top:-400px;
-  margin:0 auto;
+  margin:80px auto;
   padding:20px;
+  max-width:90%;
+  max-height:90%;
   width:800px;
   height:600px;
-  max-width:90%;
   border:20px solid #ffffff;
   background:$bg;
   color:#cecece;
@@ -1103,6 +1108,36 @@ li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
   font-size:36px;
   font-family:"ratio";
   line-height:520px;
-  @include box-shadow(0 0 80px rgba(0,0,0,.05));
-
+  @include transition(-webkit-transform 1s, -moz-transform 1s, -o-transform 1s, -ms-transform 1s, transform 1s);
+  &.active {
+    @include transform(perspective(1000px) rotateX(0deg) translateZ(0px) translateY(-100px));
+  }
 }
+
+
+#login {
+  @include box-sizing;
+  position: absolute;
+  top:0;
+  left:100%;
+  width:100%;
+  height:100%;
+  height:500px;
+  padding:200px 80px 80px;
+  @include transition(left 1s);
+  // background:rgba(240,240,240,.5);
+  #login-form,#account-form{
+    display:block;
+    width:50%;
+    float:left;
+  }
+}
+
+
+
+
+
+
+
+
+
