--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -4,11 +4,11 @@
     <h1>Besterday</h1>
     <p>
       Capture, catalogue, and remember the best part of your day, everyday.<br />
-      <a class="cta" href="#">Get started</a>
+      <a class="pure-button cta" href="#">Get started</a>
     </p>
-  </div>
-  <div class="landing-example">
-    The best part of my day was...
+    <div class="landing-hero-example">
+      The best part of my day was...
+    </div>
   </div>
   <div class="landing-story">
   </div>
