--- a/client/style/main.css
+++ b/client/style/main.css
@@ -1,6 +1,25 @@
 /* ==========================================================================
    Colors
    ========================================================================== */
+/* ==========================================================================
+   Helpers & Mixins
+   ========================================================================== */
+.opaque {
+  opacity: 1; }
+
+.left {
+  float: left !important; }
+
+.right {
+  float: right !important; }
+
+.smallcaps {
+  text-transform: uppercase;
+  letter-spacing: .2em;
+  font-weight: 400;
+  font-size: 12px;
+  font-family: "ratio"; }
+
 /*** Config ***/
 /* Colors */
 /* used for row 1 & 2 */
@@ -103,25 +122,6 @@
   height: 0px;
   left: 75%;
   border-radius: 10px 10px 10px 10px; }
-
-/* ==========================================================================
-   Helpers & Mixins
-   ========================================================================== */
-.opaque {
-  opacity: 1; }
-
-.left {
-  float: left !important; }
-
-.right {
-  float: right !important; }
-
-.smallcaps {
-  text-transform: uppercase;
-  letter-spacing: .2em;
-  font-weight: 400;
-  font-size: 12px;
-  font-family: "ratio"; }
 
 /* ==========================================================================
    Global styles
@@ -260,6 +260,140 @@ body {
   position: absolute;
   right: 20px;
   z-index: 999; }
+
+#login {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  height: 500px;
+  padding: 200px 80px 80px;
+  -webkit-transition: left 1s;
+  -moz-transition: left 1s;
+  -ms-transition: left 1s;
+  -o-transition: left 1s;
+  transition: left 1s; }
+  #login #login-form, #login #account-form {
+    display: block;
+    width: 50%;
+    float: left; }
+
+.landing-hero {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
+  margin: 0;
+  padding: 40px;
+  width: 100%;
+  min-height: 100%;
+  background: #efefef; }
+  .landing-hero h1 {
+    display: block;
+    margin: 0;
+    padding: 40px;
+    color: #cecece;
+    font-weight: 800;
+    font-size: 24px;
+    font-family: "ratio"; }
+  .landing-hero p {
+    -webkit-transition: left 1s;
+    -moz-transition: left 1s;
+    -ms-transition: left 1s;
+    -o-transition: left 1s;
+    transition: left 1s;
+    position: relative;
+    display: block;
+    margin: 0;
+    padding: 40px;
+    color: #666666;
+    font-weight: 300;
+    font-size: 48px;
+    font-family: "ratio"; }
+    .landing-hero p a.cta {
+      /* Positioning */
+      height: 36px;
+      width: 160px;
+      /* Display & Box Model */
+      display: block;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      -o-box-sizing: border-box;
+      box-sizing: border-box;
+      padding: 10px 0 0;
+      margin: 20px 0;
+      /* Presentation */
+      background-color: #ffae41;
+      /* Font */
+      color: #ffffff;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      letter-spacing: .2em;
+      font-weight: 400;
+      font-size: 12px;
+      font-family: "ratio";
+      -webkit-transition: background-color 0.2s;
+      -moz-transition: background-color 0.2s;
+      -ms-transition: background-color 0.2s;
+      -o-transition: background-color 0.2s;
+      transition: background-color 0.2s;
+      -webkit-transition: color 0.2s;
+      -moz-transition: color 0.2s;
+      -ms-transition: color 0.2s;
+      -o-transition: color 0.2s;
+      transition: color 0.2s; }
+
+.landing-hero-example {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
+  -ms-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
+  -o-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
+  -webkit-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
+  -moz-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
+  -ms-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
+  -o-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
+  transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
+  position: relative;
+  margin: 80px auto;
+  padding: 20px;
+  max-width: 90%;
+  max-height: 90%;
+  width: 800px;
+  height: 600px;
+  border: 20px solid #ffffff;
+  background: #fcf9f5;
+  color: #cecece;
+  font-weight: 300;
+  font-size: 36px;
+  font-family: "ratio";
+  line-height: 520px;
+  -webkit-transition: -webkit-transform 1s;
+  -moz-transition: -webkit-transform 1s;
+  -ms-transition: -webkit-transform 1s;
+  -o-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s; }
+  .landing-hero-example.active {
+    -webkit-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
+    -moz-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
+    -ms-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
+    -o-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
+    transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px); }
 
 /* ==========================================================================
    Journal
@@ -1078,146 +1212,99 @@ li.sidebar-menu-sub-list-week.prev, li.sidebar-menu-sub-list-week.next {
     li.sidebar-menu-sub-list-week.prev a:hover, li.sidebar-menu-sub-list-week.next a:hover {
       background: #e4e4e4; }
 
+.dashboard {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  background: #efefef;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
+.week-0 .active {
+  background: #f9f9f9; }
+
+.dashboard-day {
+  text-decoration: none;
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  clear: both;
+  padding: 10px;
+  height: 83px;
+  border-top: 2px solid #dedede;
+  border-bottom: 2px solid #dedede;
+  cursor: pointer; }
+  .dashboard-day:hover {
+    background: white; }
+    .dashboard-day:hover .dashboard-date {
+      -webkit-box-shadow: 0 3px 0 #ffae41;
+      -moz-box-shadow: 0 3px 0 #ffae41;
+      -ms-box-shadow: 0 3px 0 #ffae41;
+      -o-box-shadow: 0 3px 0 #ffae41;
+      box-shadow: 0 3px 0 #ffae41; }
+
+.dashboard-image {
+  display: none;
+  float: left;
+  clear: left; }
+
+.dashboard-date {
+  position: relative;
+  float: left;
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  background: #ffffff;
+  text-align: center;
+  -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 0 rgba(0, 0, 0, 0.1); }
+
+.dashboard-date-month {
+  display: block;
+  padding: 5px 3px 0px;
+  color: #cdcdcd;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 900;
+  font-size: 9px; }
+
+.dashboard-date-day {
+  position: relative;
+  top: -2px;
+  color: #666666;
+  font-weight: 900;
+  font-size: 24px; }
+
+.dashboard-blurb {
+  color: #666666;
+  white-space: nowrap;
+  font-weight: 400;
+  font-family: "ratio";
+  line-height: 60px; }
+  .dashboard-blurb span {
+    display: inline-block;
+    margin-right: 10px;
+    color: #ababab; }
+    .dashboard-blurb span::after {
+      display: inline-block;
+      padding-left: 10px;
+      color: #ffae41;
+      content: "/"; }
+
+/* ==========================================================================
+   Filepicker
+   ========================================================================== */
 #filepicker_shade {
   background: none !important; }
 
 #filepicker_dialog_container {
   border: none !important;
   box-shadow: none !important; }
-
-/* ==========================================================================
-   Filepicker
-   ========================================================================== */
-.landing-hero {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  position: relative;
-  margin: 0;
-  padding: 40px;
-  width: 100%;
-  min-height: 100%;
-  background: #efefef; }
-  .landing-hero h1 {
-    display: block;
-    margin: 0;
-    padding: 40px;
-    color: #cecece;
-    font-weight: 800;
-    font-size: 24px;
-    font-family: "ratio"; }
-  .landing-hero p {
-    -webkit-transition: left 1s;
-    -moz-transition: left 1s;
-    -ms-transition: left 1s;
-    -o-transition: left 1s;
-    transition: left 1s;
-    position: relative;
-    display: block;
-    margin: 0;
-    padding: 40px;
-    color: #666666;
-    font-weight: 300;
-    font-size: 48px;
-    font-family: "ratio"; }
-    .landing-hero p a.cta {
-      /* Positioning */
-      height: 36px;
-      width: 160px;
-      /* Display & Box Model */
-      display: block;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-      -o-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 10px 0 0;
-      margin: 20px 0;
-      /* Presentation */
-      background-color: #ffae41;
-      /* Font */
-      color: #ffffff;
-      text-align: center;
-      text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: .2em;
-      font-weight: 400;
-      font-size: 12px;
-      font-family: "ratio";
-      -webkit-transition: background-color 0.2s;
-      -moz-transition: background-color 0.2s;
-      -ms-transition: background-color 0.2s;
-      -o-transition: background-color 0.2s;
-      transition: background-color 0.2s;
-      -webkit-transition: color 0.2s;
-      -moz-transition: color 0.2s;
-      -ms-transition: color 0.2s;
-      -o-transition: color 0.2s;
-      transition: color 0.2s; }
-
-.landing-hero-example {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -ms-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -o-box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 80px rgba(0, 0, 0, 0.05);
-  -webkit-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -moz-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -ms-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  -o-transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  transform: perspective(1000px) rotateX(-30deg) translateZ(-180px) translateY(100px);
-  position: relative;
-  margin: 80px auto;
-  padding: 20px;
-  max-width: 90%;
-  max-height: 90%;
-  width: 800px;
-  height: 600px;
-  border: 20px solid #ffffff;
-  background: #fcf9f5;
-  color: #cecece;
-  font-weight: 300;
-  font-size: 36px;
-  font-family: "ratio";
-  line-height: 520px;
-  -webkit-transition: -webkit-transform 1s;
-  -moz-transition: -webkit-transform 1s;
-  -ms-transition: -webkit-transform 1s;
-  -o-transition: -webkit-transform 1s;
-  transition: -webkit-transform 1s; }
-  .landing-hero-example.active {
-    -webkit-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -moz-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -ms-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    -o-transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px);
-    transform: perspective(1000px) rotateX(0deg) translateZ(0px) translateY(0px); }
-
-#login {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: 100%;
-  height: 100%;
-  height: 500px;
-  padding: 200px 80px 80px;
-  -webkit-transition: left 1s;
-  -moz-transition: left 1s;
-  -ms-transition: left 1s;
-  -o-transition: left 1s;
-  transition: left 1s; }
-  #login #login-form, #login #account-form {
-    display: block;
-    width: 50%;
-    float: left; }
